--- a/ExtentReports.html
+++ b/ExtentReports.html
@@ -50,7 +50,7 @@ ExtentReports 2.0
 <i class='mdi-hardware-desktop-windows'></i>
 </li>
 <li>
-<span class='suite-started-time'>2019-06-06 08:54:58</span>
+<span class='suite-started-time'>2019-06-08 09:12:18</span>
 </li>
 <li>
 <span>v2.40.2</span>
@@ -80,25 +80,25 @@ ExtentReports 2.0
 <div class='col l2 m4 s12'>
 <div class='card suite-total-time-current'> 
 <span class='panel-name'>Total Time Taken (Current Run)</span> 
-<span class='suite-total-time-current-value panel-lead'>0h 0m 10s+719ms</span> 
+<span class='suite-total-time-current-value panel-lead'>0h 0m 13s+105ms</span> 
 </div> 
 </div>
 <div class='col l2 m4 s12'>
 <div class='card suite-total-time-overall'> 
 <span class='panel-name'>Total Time Taken (Overall)</span> 
-<span class='suite-total-time-overall-value panel-lead'>0h 0m 10s+719ms</span> 
+<span class='suite-total-time-overall-value panel-lead'>0h 0m 13s+105ms</span> 
 </div> 
 </div>
 <div class='col l2 m4 s6 suite-start-time'>
 <div class='card accent green-accent'> 
 <span class='panel-name'>Start</span> 
-<span class='panel-lead suite-started-time'>2019-06-06 08:54:48</span> 
+<span class='panel-lead suite-started-time'>2019-06-08 09:12:05</span> 
 </div> 
 </div>
 <div class='col l2 m4 s6 suite-end-time'>
 <div class='card accent pink-accent'> 
 <span class='panel-name'>End</span> 
-<span class='panel-lead suite-ended-time'>2019-06-06 08:54:58</span> 
+<span class='panel-lead suite-ended-time'>2019-06-08 09:12:18</span> 
 </div> 
 </div>
 </div>
@@ -165,19 +165,19 @@ ExtentReports 2.0
 <tbody>
 <tr>
 <td>OS</td>
-<td>Windows 7</td>
+<td>Windows 10</td>
 </tr>
 <tr>
 <td>User Name</td>
-<td>pk299</td>
+<td>pankaj kumar</td>
 </tr>
 <tr>
 <td>Java Version</td>
-<td>1.8.0_45</td>
+<td>1.8.0_211</td>
 </tr>
 <tr>
 <td>Host Name</td>
-<td>ITS012006</td>
+<td>DESKTOP-T0ENOIE</td>
 </tr>
 </tbody>
 </table>
@@ -227,7 +227,7 @@ ExtentReports 2.0
 <div class='card-panel no-padding-h no-padding-v no-margin-v'>
 <div class='wrapper'>
 <ul id='test-collection' class='test-collection'>
-<li class='collection-item test displayed active unknown ' extentid='1566826d-9840-44ef-8095-1e859a2e47d6'>
+<li class='collection-item test displayed active unknown ' extentid='56f575f5-d2dd-4d1e-99e2-d363bcc58712'>
 <div class='test-head'>
 <span class='test-name'>TC02_verifyLoginTest </span>
 <span class='test-status label right outline capitalize unknown'>unknown</span>
@@ -235,7 +235,7 @@ ExtentReports 2.0
 </div>
 <div class='test-body'>
 <div class='test-info'>
-<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2019-06-06 08:54:48</span>
+<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2019-06-08 09:12:05</span>
 <span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'></span>
 <span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'></span>
 </div>
@@ -259,7 +259,7 @@ ExtentReports 2.0
 </div>
 </div>
 </li>
-<li class='collection-item test displayed active pass ' extentid='b7e413b8-d2f1-4ace-8f57-2790d3864e89'>
+<li class='collection-item test displayed active pass ' extentid='826287f3-c518-4e4b-bdea-c14d92d97ce2'>
 <div class='test-head'>
 <span class='test-name'>VerifyLoginTest </span>
 <span class='test-status label right outline capitalize pass'>pass</span>
@@ -267,9 +267,9 @@ ExtentReports 2.0
 </div>
 <div class='test-body'>
 <div class='test-info'>
-<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2019-06-06 08:54:48</span>
-<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2019-06-06 08:54:58</span>
-<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 10s+439ms</span>
+<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2019-06-08 09:12:05</span>
+<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2019-06-08 09:12:18</span>
+<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 12s+661ms</span>
 </div>
 <div class='test-desc'></div>
 <div class='test-attributes'>
@@ -286,37 +286,37 @@ ExtentReports 2.0
 <tbody>
 <tr>
 <td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-<td class='timestamp'>08:54:48</td>
+<td class='timestamp'>09:12:05</td>
 <td class='step-details'>***************TC001 Verify Login with valid Login Details****************</td>
 </tr>
 <tr>
 <td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-<td class='timestamp'>08:54:48</td>
+<td class='timestamp'>09:12:05</td>
 <td class='step-details'>Verify logo UOS is displayed</td>
 </tr>
 <tr>
 <td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-<td class='timestamp'>08:54:48</td>
+<td class='timestamp'>09:12:06</td>
 <td class='step-details'>Verify login page title :Log On - Ci Anywhere</td>
 </tr>
 <tr>
 <td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-<td class='timestamp'>08:54:48</td>
+<td class='timestamp'>09:12:06</td>
 <td class='step-details'>Verify user able to enter username :1011002</td>
 </tr>
 <tr>
 <td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-<td class='timestamp'>08:54:50</td>
+<td class='timestamp'>09:12:08</td>
 <td class='step-details'>Verify user able to enter password :Pa55w0rd#</td>
 </tr>
 <tr>
 <td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-<td class='timestamp'>08:54:52</td>
+<td class='timestamp'>09:12:10</td>
 <td class='step-details'>Verify user able to click on Login button</td>
 </tr>
 <tr>
 <td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-<td class='timestamp'>08:54:57</td>
+<td class='timestamp'>09:12:17</td>
 <td class='step-details'>Verify home page title :Ci Anywhere Workplace</td>
 </tr>
 </tbody>
